--- a/system/common/lib/webapp.self.json
+++ b/system/common/lib/webapp.self.json
@@ -92,6 +92,12 @@
               "name": "sceKernelClose"
             },
             {
+              "id": 2623297511407571098,
+              "hex_id": "2467D330139D509A",
+              "encoded_id": "JGfTMBOdUJo",
+              "name": "sceKernelGetFsSandboxRandomWord"
+            },
+            {
               "id": 14068095488279325055,
               "hex_id": "C33BEA4F852A297F",
               "encoded_id": "wzvqT4UqKX8",
@@ -204,12 +210,6 @@
               "hex_id": "14DE2068F9AE155F",
               "encoded_id": "FN4gaPmuFV8",
               "name": "write"
-            },
-            {
-              "id": 2623297511407571098,
-              "hex_id": "2467D330139D509A",
-              "encoded_id": "JGfTMBOdUJo",
-              "name": null
             }
           ]
         }
