--- a/system_ex/app/NPXS20120/avbaseMiniApp.self.json
+++ b/system_ex/app/NPXS20120/avbaseMiniApp.self.json
@@ -2628,6 +2628,12 @@
               "name": "sceSystemServiceChangeGpuClock"
             },
             {
+              "id": 16483994478094961022,
+              "hex_id": "E4C2E9A45259C97E",
+              "encoded_id": "5MLppFJZyX4",
+              "name": "sceSystemServiceChangeNumberOfGpuCu"
+            },
+            {
               "id": 10390265331184832282,
               "hex_id": "9031A344CB540F1A",
               "encoded_id": "kDGjRMtUDxo",
@@ -2637,12 +2643,6 @@
               "id": 12237633847053432887,
               "hex_id": "A9D4CF2568EAB837",
               "encoded_id": "qdTPJWjquDc",
-              "name": null
-            },
-            {
-              "id": 16483994478094961022,
-              "hex_id": "E4C2E9A45259C97E",
-              "encoded_id": "5MLppFJZyX4",
               "name": null
             }
           ]
