--- a/system/common/lib/webapp.self.json
+++ b/system/common/lib/webapp.self.json
@@ -92,6 +92,12 @@
               "name": "sceKernelClose"
             },
             {
+              "id": 2623297511407571098,
+              "hex_id": "2467D330139D509A",
+              "encoded_id": "JGfTMBOdUJo",
+              "name": "sceKernelGetFsSandboxRandomWord"
+            },
+            {
               "id": 15307142596818687567,
               "hex_id": "D46DE51751A0D64F",
               "encoded_id": "1G3lF1Gg1k8",
@@ -198,12 +204,6 @@
               "hex_id": "14DE2068F9AE155F",
               "encoded_id": "FN4gaPmuFV8",
               "name": "write"
-            },
-            {
-              "id": 2623297511407571098,
-              "hex_id": "2467D330139D509A",
-              "encoded_id": "JGfTMBOdUJo",
-              "name": null
             }
           ]
         }
