--- a/system_ex/app/NPXS20120/avbaseminiappforneo.self.json
+++ b/system_ex/app/NPXS20120/avbaseminiappforneo.self.json
@@ -2694,6 +2694,12 @@
               "name": "sceSystemServiceChangeGpuClock"
             },
             {
+              "id": 16483994478094961022,
+              "hex_id": "E4C2E9A45259C97E",
+              "encoded_id": "5MLppFJZyX4",
+              "name": "sceSystemServiceChangeNumberOfGpuCu"
+            },
+            {
               "id": 361733742177213140,
               "hex_id": "050522EC05BEDAD4",
               "encoded_id": "BQUi7AW+2tQ",
@@ -2721,12 +2727,6 @@
               "id": 10810016931215171443,
               "hex_id": "9604E5200109DF73",
               "encoded_id": "lgTlIAEJ33M",
-              "name": null
-            },
-            {
-              "id": 16483994478094961022,
-              "hex_id": "E4C2E9A45259C97E",
-              "encoded_id": "5MLppFJZyX4",
               "name": null
             }
           ]
