--- a/system/common/lib/libSceAppInstUtil.sprx.json
+++ b/system/common/lib/libSceAppInstUtil.sprx.json
@@ -18,6 +18,12 @@
           "is_export": true,
           "symbols": [
             {
+              "id": 17148952359801340917,
+              "hex_id": "EDFD514FEC0E43F5",
+              "encoded_id": "7f1RT+wOQ-U",
+              "name": "sceAppInstUtilAppAllowDownloadInstall"
+            },
+            {
               "id": 17838387007377698716,
               "hex_id": "F78EAE78ACB0EF9C",
               "encoded_id": "946ueKyw75w",
@@ -28,6 +34,12 @@
               "hex_id": "6EAEA27F81C96A8C",
               "encoded_id": "bq6if4HJaow",
               "name": "sceAppInstUtilAppCancelableUnInstallByUser"
+            },
+            {
+              "id": 859022070197799647,
+              "hex_id": "0BEBDC05845C4ADF",
+              "encoded_id": "C+vcBYRcSt8",
+              "name": "sceAppInstUtilAppCancelMoveApps"
             },
             {
               "id": 10862123509980272656,
@@ -96,6 +108,18 @@
               "name": "sceAppInstUtilAppGetCustomThemeInfo"
             },
             {
+              "id": 17294208946668648179,
+              "hex_id": "F0015F68899136F3",
+              "encoded_id": "8AFfaImRNvM",
+              "name": "sceAppInstUtilAppGetIrremovableAppList"
+            },
+            {
+              "id": 15702224596872428768,
+              "hex_id": "D9E98213AFFB7CE0",
+              "encoded_id": "2emCE6-7fOA",
+              "name": "sceAppInstUtilAppGetNoRelatedAddcontTitleList"
+            },
+            {
               "id": 6885260975413740287,
               "hex_id": "5F8D5C60A16542FF",
               "encoded_id": "X41cYKFlQv8",
@@ -132,10 +156,22 @@
               "name": "sceAppInstUtilAppInstallPkg"
             },
             {
+              "id": 17562704139587182152,
+              "hex_id": "F3BB425D1F605E48",
+              "encoded_id": "87tCXR9gXkg",
+              "name": "sceAppInstUtilAppInstallPs4CloudGame"
+            },
+            {
               "id": 13867502827873029834,
               "hex_id": "C07344594918CECA",
               "encoded_id": "wHNEWUkYzso",
               "name": "sceAppInstUtilAppInstallRequestAddcontFromDisc"
+            },
+            {
+              "id": 506728703420577434,
+              "hex_id": "070843122CE0B69A",
+              "encoded_id": "BwhDEizgtpo",
+              "name": "sceAppInstUtilAppInstallRequestCompilationDiscApp"
             },
             {
               "id": 6550310687346230753,
@@ -162,16 +198,34 @@
               "name": "sceAppInstUtilAppPrepareOverwritePkg"
             },
             {
+              "id": 3221796468337446034,
+              "hex_id": "2CB61ED171DC8C92",
+              "encoded_id": "LLYe0XHcjJI",
+              "name": "sceAppInstUtilAppProhibitDownloadInstall"
+            },
+            {
               "id": 8952401489796402641,
               "hex_id": "7C3D51B91DFE0DD1",
               "encoded_id": "fD1RuR3+DdE",
               "name": "sceAppInstUtilAppRecoverApp"
             },
             {
+              "id": 8783874086323576576,
+              "hex_id": "79E696F14B135F00",
+              "encoded_id": "eeaW8UsTXwA",
+              "name": "sceAppInstUtilAppRequestMoveApps"
+            },
+            {
               "id": 18352829190865054587,
               "hex_id": "FEB258E960EE6B7B",
               "encoded_id": "-rJY6WDua3s",
               "name": "sceAppInstUtilAppSetSavedataUploadStatus"
+            },
+            {
+              "id": 7359140897572131682,
+              "hex_id": "6620EBA7EBD61362",
+              "encoded_id": "ZiDrp+vWE2I",
+              "name": "sceAppInstUtilAppStoreCompilationDiscInfo"
             },
             {
               "id": 5412785032887562689,
@@ -244,6 +298,12 @@
               "hex_id": "323FF66F8008EC50",
               "encoded_id": "Mj-2b4AI7FA",
               "name": "sceAppInstUtilGetAppEmptySlot"
+            },
+            {
+              "id": 6609252297522087767,
+              "hex_id": "5BB8C7F280BD0757",
+              "encoded_id": "W7jH8oC9B1c",
+              "name": "sceAppInstUtilGetAppMoveProgressInfo"
             },
             {
               "id": 13579770697462641195,
@@ -324,18 +384,6 @@
               "name": "sceAppInstUtilTerminate"
             },
             {
-              "id": 506728703420577434,
-              "hex_id": "070843122CE0B69A",
-              "encoded_id": "BwhDEizgtpo",
-              "name": null
-            },
-            {
-              "id": 859022070197799647,
-              "hex_id": "0BEBDC05845C4ADF",
-              "encoded_id": "C+vcBYRcSt8",
-              "name": null
-            },
-            {
               "id": 1270295708090200263,
               "hex_id": "11A0FF37586B70C7",
               "encoded_id": "EaD-N1hrcMc",
@@ -345,12 +393,6 @@
               "id": 3060287714663378492,
               "hex_id": "2A7853765F00AE3C",
               "encoded_id": "KnhTdl8Arjw",
-              "name": null
-            },
-            {
-              "id": 3221796468337446034,
-              "hex_id": "2CB61ED171DC8C92",
-              "encoded_id": "LLYe0XHcjJI",
               "name": null
             },
             {
@@ -366,18 +408,6 @@
               "name": null
             },
             {
-              "id": 6609252297522087767,
-              "hex_id": "5BB8C7F280BD0757",
-              "encoded_id": "W7jH8oC9B1c",
-              "name": null
-            },
-            {
-              "id": 7359140897572131682,
-              "hex_id": "6620EBA7EBD61362",
-              "encoded_id": "ZiDrp+vWE2I",
-              "name": null
-            },
-            {
               "id": 7423604956567978365,
               "hex_id": "6705F1604510417D",
               "encoded_id": "ZwXxYEUQQX0",
@@ -388,12 +418,6 @@
               "hex_id": "6EEB4DDD56E322E6",
               "encoded_id": "butN3VbjIuY",
               "type": "Object",
-              "name": null
-            },
-            {
-              "id": 8783874086323576576,
-              "hex_id": "79E696F14B135F00",
-              "encoded_id": "eeaW8UsTXwA",
               "name": null
             },
             {
@@ -448,30 +472,6 @@
               "id": 15505472839744236084,
               "hex_id": "D72E81656F6C2A34",
               "encoded_id": "1y6BZW9sKjQ",
-              "name": null
-            },
-            {
-              "id": 15702224596872428768,
-              "hex_id": "D9E98213AFFB7CE0",
-              "encoded_id": "2emCE6-7fOA",
-              "name": null
-            },
-            {
-              "id": 17148952359801340917,
-              "hex_id": "EDFD514FEC0E43F5",
-              "encoded_id": "7f1RT+wOQ-U",
-              "name": null
-            },
-            {
-              "id": 17294208946668648179,
-              "hex_id": "F0015F68899136F3",
-              "encoded_id": "8AFfaImRNvM",
-              "name": null
-            },
-            {
-              "id": 17562704139587182152,
-              "hex_id": "F3BB425D1F605E48",
-              "encoded_id": "87tCXR9gXkg",
               "name": null
             },
             {
