--- a/system/common/lib/webapp.self.json
+++ b/system/common/lib/webapp.self.json
@@ -600,6 +600,12 @@
           "is_export": false,
           "symbols": [
             {
+              "id": 16817870396196861977,
+              "hex_id": "E96514053BDF3819",
+              "encoded_id": "6WUUBTvfOBk",
+              "name": "_ZN4Manx13KeyboardEventC1ENS0_4TypeEibbbbb"
+            },
+            {
               "id": 7899435973538202388,
               "hex_id": "6DA06F2A38AFC314",
               "encoded_id": "baBvKjivwxQ",
@@ -621,13 +627,7 @@
               "id": 14727306825794384893,
               "hex_id": "CC61E78789A8F3FD",
               "encoded_id": "zGHnh4mo8-0",
-              "name": null
-            },
-            {
-              "id": 16817870396196861977,
-              "hex_id": "E96514053BDF3819",
-              "encoded_id": "6WUUBTvfOBk",
-              "name": null
+              "name": "_ZN4Manx8ImeEventC1ENS0_12ImeEventTypeEPKci"
             }
           ]
         }
