--- a/system/common/lib/libSceAppInstUtil.sprx.json
+++ b/system/common/lib/libSceAppInstUtil.sprx.json
@@ -384,6 +384,12 @@
               "name": "sceAppInstUtilCheckAppSystemVer"
             },
             {
+              "id": 13645639263506169409,
+              "hex_id": "BD5F0C9CCA687E41",
+              "encoded_id": "vV8MnMpofkE",
+              "name": "sceAppInstUtilDeleteExternalPs5All"
+            },
+            {
               "id": 6457561821419531869,
               "hex_id": "599DDE4350D5EE5D",
               "encoded_id": "WZ3eQ1DV7l0",
@@ -412,6 +418,12 @@
               "hex_id": "C989A28865B48DF9",
               "encoded_id": "yYmiiGW0jfk",
               "name": "sceAppInstUtilGetDataDiscCopyProgress"
+            },
+            {
+              "id": 17655056004324547092,
+              "hex_id": "F5035BE53B645A14",
+              "encoded_id": "9QNb5TtkWhQ",
+              "name": "sceAppInstUtilGetExternalPs5AllSize"
             },
             {
               "id": 18072612140917138786,
@@ -520,18 +532,6 @@
               "hex_id": "6EEB4DDD56E322E6",
               "encoded_id": "butN3VbjIuY",
               "type": "Object",
-              "name": null
-            },
-            {
-              "id": 13645639263506169409,
-              "hex_id": "BD5F0C9CCA687E41",
-              "encoded_id": "vV8MnMpofkE",
-              "name": null
-            },
-            {
-              "id": 17655056004324547092,
-              "hex_id": "F5035BE53B645A14",
-              "encoded_id": "9QNb5TtkWhQ",
               "name": null
             }
           ]
