--- a/system/common/lib/libSceHubAppUtil.sprx.json
+++ b/system/common/lib/libSceHubAppUtil.sprx.json
@@ -21,19 +21,19 @@
               "id": 1606406275751560596,
               "hex_id": "164B19FF27214594",
               "encoded_id": "FksZ-ychRZQ",
-              "name": null
+              "name": "sceHubAppUtilDeeplinkToLiveDetailView"
             },
             {
               "id": 11489164350696833100,
               "hex_id": "9F71B61AD15DC04C",
               "encoded_id": "n3G2GtFdwEw",
-              "name": null
+              "name": "sceHubAppUtilDeeplinkToPSSubscriptions"
             },
             {
               "id": 12171444641747561702,
               "hex_id": "A8E9A86A22B1ECE6",
               "encoded_id": "qOmoaiKx7OY",
-              "name": null
+              "name": "sceHubAppUtilGetInstallationStatus"
             }
           ]
         }
