--- a/system/common/lib/libfontconfig.sprx.json
+++ b/system/common/lib/libfontconfig.sprx.json
@@ -46,6 +46,12 @@
               "name": "FcConfigDestroy"
             },
             {
+              "id": 15622556321936201721,
+              "hex_id": "D8CE7833F48A57F9",
+              "encoded_id": "2M54M-SKV-k",
+              "name": "FcConfigGetCurrent"
+            },
+            {
               "id": 14485720259660668240,
               "hex_id": "C9079DD3D8C0DD50",
               "encoded_id": "yQed09jA3VA",
@@ -110,6 +116,12 @@
               "hex_id": "0301B31709DA8AD4",
               "encoded_id": "AwGzFwnaitQ",
               "name": "FcInit"
+            },
+            {
+              "id": 742923500237082610,
+              "hex_id": "0A4F64FCBEEBCFF2",
+              "encoded_id": "Ck9k-L7rz-I",
+              "name": "FcInitBringUptoDate"
             },
             {
               "id": 3371991453750744938,
@@ -244,6 +256,12 @@
               "name": "FcPatternGetBool"
             },
             {
+              "id": 2177842285776719064,
+              "hex_id": "1E3940052C8BCCD8",
+              "encoded_id": "HjlABSyLzNg",
+              "name": "FcPatternGetFTFace"
+            },
+            {
               "id": 15569335528709093386,
               "hex_id": "D811642C6992F80A",
               "encoded_id": "2BFkLGmS+Ao",
@@ -278,24 +296,6 @@
               "hex_id": "F979CB2F0B76ABF6",
               "encoded_id": "+XnLLwt2q-Y",
               "name": "FcPatternRemove"
-            },
-            {
-              "id": 742923500237082610,
-              "hex_id": "0A4F64FCBEEBCFF2",
-              "encoded_id": "Ck9k-L7rz-I",
-              "name": null
-            },
-            {
-              "id": 2177842285776719064,
-              "hex_id": "1E3940052C8BCCD8",
-              "encoded_id": "HjlABSyLzNg",
-              "name": null
-            },
-            {
-              "id": 15622556321936201721,
-              "hex_id": "D8CE7833F48A57F9",
-              "encoded_id": "2M54M-SKV-k",
-              "name": null
             }
           ]
         }
