--- a/system/common/lib/libSceAppContent.sprx.json
+++ b/system/common/lib/libSceAppContent.sprx.json
@@ -35,6 +35,12 @@
               "name": "sceAppContentAddcontEnqueueDownload"
             },
             {
+              "id": 5571866886375480281,
+              "hex_id": "4D533F69822C1BD9",
+              "encoded_id": "TVM-aYIsG9k",
+              "name": "sceAppContentAddcontEnqueueDownloadSp"
+            },
+            {
               "id": 6053789120208724393,
               "hex_id": "54036121672A61A9",
               "encoded_id": "VANhIWcqYak",
@@ -81,6 +87,12 @@
               "hex_id": "079815795BAB7540",
               "encoded_id": "B5gVeVurdUA",
               "name": "sceAppContentDownload1Expand"
+            },
+            {
+              "id": 10468503782582349754,
+              "hex_id": "914798B9CAA76FBA",
+              "encoded_id": "kUeYucqnb7o",
+              "name": "sceAppContentDownload1Shrink"
             },
             {
               "id": 639164166434402389,
@@ -189,18 +201,6 @@
               "hex_id": "6DCA255CC9A9EAA4",
               "encoded_id": "bcolXMmp6qQ",
               "name": "sceAppContentTemporaryDataUnmount"
-            },
-            {
-              "id": 5571866886375480281,
-              "hex_id": "4D533F69822C1BD9",
-              "encoded_id": "TVM-aYIsG9k",
-              "name": null
-            },
-            {
-              "id": 10468503782582349754,
-              "hex_id": "914798B9CAA76FBA",
-              "encoded_id": "kUeYucqnb7o",
-              "name": null
             }
           ]
         },
