--- a/system/common/lib/libfontconfig.sprx.json
+++ b/system/common/lib/libfontconfig.sprx.json
@@ -37,6 +37,18 @@
               "name": "FcCharSetDestroy"
             },
             {
+              "id": 3578043593775932329,
+              "hex_id": "31A7C3B0F5E063A9",
+              "encoded_id": "MafDsPXgY6k",
+              "name": "FcCharSetMerge"
+            },
+            {
+              "id": 2864743209202309697,
+              "hex_id": "27C19CC54D375A41",
+              "encoded_id": "J8GcxU03WkE",
+              "name": "FcCharSetSubtractCount"
+            },
+            {
               "id": 2047804546408608977,
               "hex_id": "1C6B43629E1D74D1",
               "encoded_id": "HGtDYp4ddNE",
@@ -47,6 +59,12 @@
               "hex_id": "3A8AFBBA409764E1",
               "encoded_id": "Oor7ukCXZOE",
               "name": "FcConfigDestroy"
+            },
+            {
+              "id": 15622556321936201721,
+              "hex_id": "D8CE7833F48A57F9",
+              "encoded_id": "2M54M-SKV-k",
+              "name": "FcConfigGetCurrent"
             },
             {
               "id": 14485720259660668240,
@@ -79,6 +97,12 @@
               "name": "FcFontMatch"
             },
             {
+              "id": 791103741869439997,
+              "hex_id": "0AFA90A96A9C3BFD",
+              "encoded_id": "CvqQqWqcO-0",
+              "name": "FcFontRenderPrepare"
+            },
+            {
               "id": 10683106151741315825,
               "hex_id": "944204718854DAF1",
               "encoded_id": "lEIEcYhU2vE",
@@ -103,6 +127,12 @@
               "name": "FcFontSetMatch"
             },
             {
+              "id": 3461658214297193182,
+              "hex_id": "300A47CE24FF4ADE",
+              "encoded_id": "MApHziT-St4",
+              "name": "FcFontSort"
+            },
+            {
               "id": 10911716522123647737,
               "hex_id": "976E345D36F0DAF9",
               "encoded_id": "l240XTbw2vk",
@@ -113,6 +143,12 @@
               "hex_id": "0301B31709DA8AD4",
               "encoded_id": "AwGzFwnaitQ",
               "name": "FcInit"
+            },
+            {
+              "id": 742923500237082610,
+              "hex_id": "0A4F64FCBEEBCFF2",
+              "encoded_id": "Ck9k-L7rz-I",
+              "name": "FcInitBringUptoDate"
             },
             {
               "id": 3371991453750744938,
@@ -187,6 +223,12 @@
               "name": "FcPatternAddLangSet"
             },
             {
+              "id": 7396803632074668722,
+              "hex_id": "66A6B9B6A3213AB2",
+              "encoded_id": "Zqa5tqMhOrI",
+              "name": "FcPatternAddMatrix"
+            },
+            {
               "id": 7876220248944846401,
               "hex_id": "6D4DF4961F18A641",
               "encoded_id": "bU30lh8YpkE",
@@ -247,6 +289,18 @@
               "name": "FcPatternGetBool"
             },
             {
+              "id": 3795095864801166872,
+              "hex_id": "34AAE394EE070618",
+              "encoded_id": "NKrjlO4HBhg",
+              "name": "FcPatternGetCharSet"
+            },
+            {
+              "id": 2177842285776719064,
+              "hex_id": "1E3940052C8BCCD8",
+              "encoded_id": "HjlABSyLzNg",
+              "name": "FcPatternGetFTFace"
+            },
+            {
               "id": 15569335528709093386,
               "hex_id": "D811642C6992F80A",
               "encoded_id": "2BFkLGmS+Ao",
@@ -281,60 +335,6 @@
               "hex_id": "F979CB2F0B76ABF6",
               "encoded_id": "+XnLLwt2q-Y",
               "name": "FcPatternRemove"
-            },
-            {
-              "id": 742923500237082610,
-              "hex_id": "0A4F64FCBEEBCFF2",
-              "encoded_id": "Ck9k-L7rz-I",
-              "name": null
-            },
-            {
-              "id": 791103741869439997,
-              "hex_id": "0AFA90A96A9C3BFD",
-              "encoded_id": "CvqQqWqcO-0",
-              "name": null
-            },
-            {
-              "id": 2177842285776719064,
-              "hex_id": "1E3940052C8BCCD8",
-              "encoded_id": "HjlABSyLzNg",
-              "name": null
-            },
-            {
-              "id": 2864743209202309697,
-              "hex_id": "27C19CC54D375A41",
-              "encoded_id": "J8GcxU03WkE",
-              "name": null
-            },
-            {
-              "id": 3461658214297193182,
-              "hex_id": "300A47CE24FF4ADE",
-              "encoded_id": "MApHziT-St4",
-              "name": null
-            },
-            {
-              "id": 3578043593775932329,
-              "hex_id": "31A7C3B0F5E063A9",
-              "encoded_id": "MafDsPXgY6k",
-              "name": null
-            },
-            {
-              "id": 3795095864801166872,
-              "hex_id": "34AAE394EE070618",
-              "encoded_id": "NKrjlO4HBhg",
-              "name": null
-            },
-            {
-              "id": 7396803632074668722,
-              "hex_id": "66A6B9B6A3213AB2",
-              "encoded_id": "Zqa5tqMhOrI",
-              "name": null
-            },
-            {
-              "id": 15622556321936201721,
-              "hex_id": "D8CE7833F48A57F9",
-              "encoded_id": "2M54M-SKV-k",
-              "name": null
             }
           ]
         }
